Changelog
=========

2019.2.0 (unreleased)
---------------------

- Include preserved_as_paper_default in the @config endpoint and view. [Rotonen]
- Implement resolving dossiers recursively via REST API. [lgraf]
- Allow members to access plone vocabularies through restapi. [elioschmutz]
- Workspaces do no longer inherit from dossiers. [elioschmutz]
- Optimise local roles security reindexing in tasks. [Rotonen]
- Add keywords-filter for document listings. [njohner]
- Show dossier from template action also when adding dossier disallowed. [njohner]
- Improve task restriction query, so that it works also on oracle backends. [phgross]
- Add restapi @journal endpoint to get journal entries. [elioschmutz]
- Omit the `revoke_permissions` field instead of only hiding it. [phgross]
- Fix issue on task creation when is_private feature is disabled. [phgross]
- Add webaction forms (add and edit) and management view. [njohner]
- Fix solr error during copy/paste of word document. [njohner]
- Allow non-member contributors to use the REST API. [Rotonen]
- Add archival file management view on dossier level. [njohner]
- Show archival file state on documents overview for managers. [njohner]
- Fix tests failing due to timezone leading to date shift. [njohner]
- Display user chosen Favorites as a Oneoffixx template group. [Rotonen]
- Add a filter to the Oneoffixx template selection wizard. [Rotonen]
- Use user chosen favorites as the default Oneoffixx template group. [Rotonen]
- Display user chosen Favorites as an Oneoffixx template group. [Rotonen]
- Include filename in the livesearch endpoint results. [phgross]
- Prevent tasks from being created as private or switched to private when feature is not enabled. [Rotonen, phgross]
- Bump ftw.mail to 2.6.0 to get error logging on inbound mail failures. [lgraf]
- Handle complex URLs as titles on journal PDF exports. [Rotonen]
- Add documentation for documents endpoints (checkin/out, locking, versions) [phgross]